chore: add Spotless with Google Java Format (#8)
* docs: add Spotless formatting design spec

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* docs: add Spotless formatting implementation plan

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* chore: add Spotless with Google Java Format, apply to all sources

- spotless-maven-plugin 3.5.1, googleJavaFormat 1.28.0 (Java 25 compatible)
- spotless:check bound to verify phase; enforced by Jenkins on every PR
- one-time reformat of all existing .java files

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* docs: add Spotless remediation guidance to CLAUDE.md

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

---------

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>